--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="i-dont-know">
                   <img src="whatsapp.png" alt=""/>
                   <p>Click the link to join our whatsapp group</p>
-                <a class="main" href="https://api.whatsapp.com/send?phone=2347080215083&text=&source=&data=" style="margin-top:20px;">Chat me on Whatsapp</a>
+                <a class="main" href="https://api.whatsapp.com/send?phone=2347080215083&text=&source=&data=" style="margin-top:20px;">Join our Whatsapp group</a>
               </div>
             </div>
             <p style="margin-top:30px">but if you have any problem joining with the link kindly call this number <a href="tel:07036576348">07036576348</a></p>
